--- a/app/views/attractions/index.html.erb
+++ b/app/views/attractions/index.html.erb
@@ -2,6 +2,6 @@
 
 <ul>
   <% @attractions.each do |attraction| %>
-    <li>Go on <%= link_to attraction.name, attraction_path(attraction) %></li>
+    <li><%= link_to "Go on #{attraction.name}", attraction_path(attraction) %></li>
   <% end %>
 </ul>
