--- a/app/views/attractions/show.html.erb
+++ b/app/views/attractions/show.html.erb
@@ -1,1 +1,3 @@
-<h1>BLURBBB</h1>
+<h1><%= @attraction.name %></h1>
+
+<%= button_to "Go on this ride", {controller: 'rides', action: 'create'}, params: {attraction_id: @attraction.id} %>
