--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,10 +24,16 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
            <!--  nav here -->
+             <li><%= link_to "Sign Up", new_user_path %></li>
+             <li><%= link_to "Sign In", signin_path %></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </div>
+
+    <%= content_tag(:div, flash[:error], :id => "flash_error") if flash[:error] %>
+    <%= content_tag(:div, flash[:notice], :id => "flash_notice") if flash[:notice] %>
+    <%= content_tag(:div, flash[:alert], :id => "flash_alert") if flash[:alert] %>
 
     <!-- content -->
     <div class="container"  role="main">
