--- a/app/views/attractions/index.html.erb
+++ b/app/views/attractions/index.html.erb
@@ -1,5 +1,9 @@
 <h1>Attractions</h1>
 
+<% if current_user.admin %>
+  <%= link_to "New Attraction", new_attraction_path %>
+<% end %>
+
 <ul>
   <% @attractions.each do |attraction| %>
     <li><%= link_to "Go on #{attraction.name}", attraction_path(attraction) %></li>
