--- a/app/views/attractions/index.html.erb
+++ b/app/views/attractions/index.html.erb
@@ -6,6 +6,10 @@
 
 <ul>
   <% @attractions.each do |attraction| %>
-    <li><%= link_to "Go on #{attraction.name}", attraction_path(attraction) %></li>
+    <% if current_user.admin %>
+      <li><%= link_to "Show #{attraction.name}", attraction_path(attraction) %></li>
+    <% else %>
+      <li><%= link_to "Go on #{attraction.name}", attraction_path(attraction) %></li>
+    <% end %>
   <% end %>
 </ul>
