--- a/app/views/attractions/show.html.erb
+++ b/app/views/attractions/show.html.erb
@@ -1,3 +1,7 @@
 <h1><%= @attraction.name %></h1>
 
 <%= button_to "Go on this ride", {controller: 'rides', action: 'create'}, params: {attraction_id: @attraction.id} %>
+
+<% if current_user.admin %>
+  <%= link_to "Edit Attraction", edit_attraction_path %>
+<% end %>
